# backend

./: .gitignore  Makefile  README.md  docker-compose.yml  envoy.yaml
app/algorithm/: Dockerfile  pyproject.toml
app/algorithm/src/: main.py
app/algorithm/src/app/: consumer.py  manager.py
app/algorithm/src/grpc_/: algorithm_client.py
app/algorithm/src/infrastructure/broker/: consumer.py  manager.py  producer.py
app/algorithm/src/infrastructure/object_storage/: interface.py  object_storage_manager.py
app/algorithm/src/services/: parse_service.py  parsedir.py  parser.py
app/algorithm/src/services/experimental_parser/: README.md  dependency_tracker.py  graph_merger.py  import_resolver.py  logger.py  node_extractors.py  node_handlers.py  parser.py  reference.json  scope_manager.py  test.py  utils.py
app/algorithm/src/services/manage/: object_manager.py
app/algorithm/src/utils/: config.py  logger.py
app/core/: Dockerfile  config.yml.template  pyproject.toml
app/core/makes/: config.yml.template  entrypoint.sh  generate_config.sh
app/core/src/: main.py  test front2.py  test_front.py
app/core/src/broker/: producer.py
app/core/src/database/: accounts.py  base.py  datamanager.py  projects.py
app/core/src/endpoints/: account_endpoints.py  auth_endpoints.py  core_endpoints.py  project_endpoints.py  routers.py
app/core/src/exceptions/: service_exception_descriptions.py  service_exception_middleware.py  service_exception_models.py
app/core/src/grpc_/: core_server.py  grpc_process_runner.py  server_starter.py
app/core/src/infrastructure/broker/: consumer.py  interface.py  manager.py  producer.py
app/core/src/infrastructure/email/: email_service.py
app/core/src/infrastructure/exceptions/: exception_handlers.py  service_exception_models.py
app/core/src/infrastructure/object_storage/: interface.py  s3_manager.py  (+1 more)
app/core/src/models/: account_models.py  auth_models.py  core_models.py  project_models.py
app/core/src/services/: account_service.py  auth_service.py  core_service.py  email_service.py  project_service.py  task_service.py
app/core/src/utils/: config.py  logger.py
services/core/: pyproject.toml
(+22 files in other folders)
