[project]
name = "core"
version = "0.1.0"
description = "Основной сервис для работы"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "aioboto3>=15.5.0",
    "aiohttp>=3.13.2",
    "asyncpg>=0.30.0",
    "aws-requests-auth>=0.4.3",
    "bcrypt>=5.0.0",
    "boto3>=1.40.52",
    "botocore>=1.40.52",
    "cryptography>=46.0.3",
    "fastapi>=0.118.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "locust>=2.41.6",
    "pika>=1.3.2",
    "protobuf>=6.33.0",
    "pyinstrument>=5.1.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
