[project]
name = "service-auth"
version = "0.1.0"
description = "Authentication microservice"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.20",
    "psycopg2-binary>=2.9.9"
]

[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"
